Added .DS_Store, desktop.ini, Thumbs.db, and *.log to .gitignore of python_examples and CassiaSDKGuide directories.

--- a/python_examples/.gitignore
+++ b/python_examples/.gitignore
@@ -56,5 +56,14 @@ docs/_build/
 # PyBuilder
 target/
 
+# Windows thumbnail db
+Thumbs.db
+
+# Windows desktop.ini
+desktop.ini
+
+# OSX files
+.DS_Store
+
 # Output Example File
 example_output.txt
