Added acScantoRemoteServer.js example. Added to Makefile and .gitignore for the python examples.

--- a/python_examples/router_container/cassia-container-ti-sensortag-example/.gitignore
+++ b/python_examples/router_container/cassia-container-ti-sensortag-example/.gitignore
@@ -89,7 +89,7 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# Directory to store data from application
+# Directory to store data
 data/
 
 .DS_Store
